<resources>
    <string name="app_name">Restaurant app</string>
    <string name="item_topic">Item Details</string>
    <string name="card_nm">123</string>
    <string name="card_name">balance</string>
    <string name="item_des_name">VEGETARIAN FOOD</string>
    <string name="item_cate">Float Cake Vietnam</string>
    <string name="item_des">Band troy are small white balls made of brown sugar, wrapped in glutinous rice flour. The name floating cakes came about from the way it is actually cooked.</string>
    <string name="quantity">01</string>
    <string name="item_price">$5.78</string>
    <string name="add_to_cart_btn">add to cart</string>
    <string name="server_name_pro">Server Name</string>
    <string name="server_email_pro">Email address</string>
    <string name="server_email_address_pro">Server@gmail.com</string>
    <string name="server_password_pro">Password</string>
    <string name="server_password_con_pro">****************</string>
    <string name="order_id">Order ID</string>
    <string name="order_name">Order Name</string>
    <string name="order_phone">Order Phone</string>
    <string name="order_status">Order Status</string>
    <string name="order_address">Order Address</string>
    <string name="server_menu_order">Order</string>
    <string name="order_topic">Order</string>
    <string name="action_status">Action Status</string>
    <string name="action">Action</string>
    <string name="shipper_lable">Shipper</string>
    <string name="shipper_nav">Shipper</string>
    <string name="shipper_topic">Shipper</string>
    <string name="add_shipper_btn">Add shipper</string>
    <string name="shipper_id">Shipper ID</string>
    <string name="shipper_password">Shipper Password</string>
    <string name="shipper_phone">Shipper Phone</string>
    <string name="add_shipper_topic">ADD Shipper</string>
    <string name="shipper_name_lable">Shipper Name</string>
    <string name="shipper_id_lable">Shipper ID</string>
    <string name="shipper_phone_lable">Shipper Phone</string>
    <string name="shipper_password_lable">Shipper Password</string>
    <string name="shipping_map">Shipping</string>
    <string name="title_activity_shipping_maps">ShippingMapsActivity</string>
    <string name="verify_code_btn">Verify Code</string>
    <string name="via_sms_lable">Via SMS</string>
    <string name="number_lable">+94000000000</string>
    <string name="via_email_lable">Via Email</string>
    <string name="email_lable">exsample@gmail.com</string>
    <string name="des_selection">Select which contact detail should we use to reset your password!</string>
    <string name="forget_password_topic">Forget Password</string>
    <string name="des_foroget">provide your account email for which you want to reset your oassword!</string>
    <string name="title_activity_maps_tracker">MapsTrackerActivity</string>
    <string name="location">location</string>

    <string name="shipper_name">Shipper name</string>

</resources>