<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg003"
    tools:context=".User.ItemActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <ImageView
                android:id="@+id/item_backbtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:padding="1dp"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:tint="@color/black" />

            <ImageView
                android:id="@+id/add_person"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="50dp"
                android:elevation="6dp"
                android:onClick="calldashboard"
                android:src="@drawable/ic_baseline_home_24"
                app:tint="@color/black" />

            <ImageView
                android:id="@+id/item_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/ic_baseline_turned_in_24"
                app:tint="@color/black" />
        </RelativeLayout>

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/item_topic"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/item_main"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="8dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/fav2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="156dp"
            android:layout_marginTop="-50dp"
            android:padding="30dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="#fece2f"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/payment_lable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:includeFontPadding="false"
                        android:text="@string/rate_cart"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/payment_des"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/payment_lable"
                        android:layout_centerInParent="true"
                        android:includeFontPadding="false"
                        android:text="Rating"
                        android:textSize="14sp" />

                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="#fece2f"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/payment_lable2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:includeFontPadding="false"
                        android:text="150"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/payment_des2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/payment_lable2"
                        android:layout_centerInParent="true"
                        android:includeFontPadding="false"
                        android:text="@string/card_name"
                        android:textSize="14sp" />

                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/item_des_name"
                android:textColor="#FF6813"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView10"
                android:layout_marginTop="4dp"
                android:text="@string/item_cate"
                android:textColor="#091020"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView11"
                android:layout_marginTop="10dp"
                android:text="@string/item_des" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="45dp"
                android:text="@string/quantity"
                android:textColor="#272670"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="75dp"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:text="@string/item_price"
                android:textColor="#272670"
                android:textSize="24sp"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <Button
            android:id="@+id/add_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:onClick="calladdtocart"
            android:text="@string/add_to_cart_btn"
            android:textColor="@color/black" />
    </LinearLayout>

</ScrollView>